--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300&display=swap');
+:root{
+    --backround-color:#fff;
+    --blue-color:#8193F1;
+    --black-color:#000;
+}
 body{
     font-family: poppins !important;
     margin: 0;
@@ -123,7 +128,7 @@ body{
 	color: #000;
 }
 .footer{
-    background-color: var(--blue-color);
+    background-color:#011802 ;
 }
 #about,#skills,#services,#blog,#contact{
     padding-top: 50px;
