fix errors of webview

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body{
     line-height: 60px;
     margin-bottom: 15px;
     background-image: linear-gradient(#719a0a, #fbaf32);
-    -webkit-background-clip: text;
+    -webkit-background-clip:text;
     -webkit-text-fill-color: transparent;
 }
 
@@ -131,7 +131,7 @@ body{
 .footer{
     background-color:#011802 ;
 }
-#about,#skills,#services,#blog,#contact{
+#about,#skills,#services,#blog,#contact,#menu{
     padding-top: 50px;
 }
  /* Form styles */
@@ -169,11 +169,17 @@ body{
     
 }
 .btn{
-    background-color: #fff;
+    background-color: #011802;
+    color: #fff;
     position: relative;
     top: 50%;
     margin-top: 100px;
 
+}
+.about{
+    margin-left: 80px;
+    margin-right: 80px;
+    /* margin: 100px; */
 }
 .about .left {
     width: 50%;
@@ -181,8 +187,10 @@ body{
     text-indent: 5px;
 }
 .about .right {
-    width: 50%;
+    width: 45%;
     float: right;
+    padding-left: 15px;
+    /* margin-left: 15px; */
    
 }
  .about .right img {
@@ -191,4 +199,8 @@ body{
     margin-left: auto;
     margin-right: auto;
 
+ }
+ .menu{
+    margin-left: 50px;
+    margin-right: 50px;
  }
