--- a/style.css
+++ b/style.css
@@ -4,26 +4,23 @@
     --blue-color:#8193F1;
     --black-color:#000;
 }
-body{
+* {
     box-sizing: border-box;
-    font-family: poppins !important;
     margin: 0;
     padding: 0;
-}
-/* added styles */
- img{
-    width:100%;
-    object-fit: cover;
+  }
+  
+body{
+   font-family: poppins !important;
+   /* background-color: #011802;
+   color: #fff; */
     
- }
- /* end of added styles */
+}
 .navbar-custom{
     display:flex;
     justify-content: space-between;
     background-color: #011802 !important; 
     color: aliceblue;
-    /* margin-left: 10px;
-    margin-right: 10px; */
 }
 
 .home .hmimage{
@@ -31,26 +28,16 @@ body{
     
     /* opacity: 0.9; */
 }
- /* added styles */
- /* .btn{
-    position:relative
-
-    
- } */
-
- /* end of added styles */
-
-
 .home {
   position: relative;
   text-align: center;
   color: white;
-  /* margin: 10px; */
 }
 .hmtext{
     position: absolute;
-    margin-top: 300px;
-    top: 30px;
+    margin-top: 150px;
+    font-size: 5vw;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-weight:bolder;
@@ -110,7 +97,7 @@ body{
     line-height: 60px;
     margin-bottom: 15px;
     background-image: linear-gradient(#719a0a, #fbaf32);
-    -webkit-background-clip:text;
+    /* -webkit-background-clip: text; */
     -webkit-text-fill-color: transparent;
 }
 
@@ -149,11 +136,9 @@ body{
 	color: #000;
 }
 .footer{
-    background-color:#011802;
-    /* margin-left: 10px;
-    margin-right: 10px; */
+    background-color:#011802 ;
 }
-#about,#skills,#services,#blog,#contact,#menu{
+#about,#menu,#skills,#services,#blog,#contact{
     padding-top: 50px;
 }
  /* Form styles */
@@ -181,7 +166,6 @@ body{
   /* end of form styles */
   .hmimage img{
       width: 100%;
-    
   }
 
   /*added style */
@@ -197,187 +181,228 @@ body{
     position: relative;
     top: 50%;
     margin-top: 100px;
+    cursor: pointer;
 
-}
-.about{
-    margin-left: 80px;
-    margin-right: 80px;
-    /* margin: 100px; */
 }
 .about .left {
     width: 50%;
     float: left;
     text-indent: 5px;
+    padding-left: 50px;
 }
 .about .right {
     width: 45%;
     float: right;
-    padding-left: 15px;
-    /* margin-left: 15px; */
+    margin-left: 5px;
    
 }
  .about .right img {
     width: 75%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    display: block;    
+}
+.menu{
+    margin: 30px;
+}
+/* .imgmenu{
+    width: 75%;
+} */
 
- }
- .menu{
-    margin-left: 70px;
-    margin-right: 70px;
- }
- @media screen and (min-width:787) {
+/* Media Query */
+/* 
+@media screen and (min-width:1119px) {
+    body{
+    width: 100%;
+    }
+    
     .hmtext{
         position: absolute;
-        margin-top: 100px;
-        top: 30px;
+        margin-top: 120px; 
+        
         left: 50%;
         transform: translate(-50%, -50%);
         font-weight:bolder;
     }
 
-    .btn{
-        background-color: #011802;
-        color: #fff;
-        position: relative;
-        top: 30%;
-        margin-top: 100px;
-    
+    .hmtext .btn{
+        margin-top: 30px; 
     }
-      .home .hmimage{
+    .home .hmimage{
         width: 100%;
         
-        /* opacity: 0.9; */
+        
     }
- }
+    .home {
+      position: relative;
+      text-align: center;
+      color: white;
+    } */
+    
+    /* body{
+        width: 100%;
+    }
+    img{
+        width: 100%;
+    }
+  
+   
+    .home {
 
- .example {
-    padding: 20px;
-    color: white;
-  }
-  /* Extra small devices (phones, 600px and down) */
-  @media only screen and (max-width: 600px) {
+        position: relative;
+        text-align: center;
+        color: white;
+      }
+      .hmtext{
+          position: absolute;
+          margin-top: 50px;
+          top: 30%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          font-weight:bolder;
+      } */
+
+/* For Trobleshooting  */
+      .example {
+        padding: 20px;
+        color: white}
+      /* Extra small devices (phones, 600px and down) */
+    @media only screen and (max-width: 600px) {
     .example {background: red;}
+
     .hmtext{
-        /* position: absolute; */
-        margin-top: 50px;
-        line-height: 0.8;
-         top: 70px; 
+        position: absolute;
+        margin-top: 30px; 
+        text-align: center;
+        /* top: 20%; */
         left: 50%;
         transform: translate(-50%, -50%);
         font-weight:bolder;
-        font-size: 5rem;
+        font-size: 1px;
     }
+    .hmtext h1{
+        font-size: 25px;
+        margin: auto;
+    }
+
     .hmtext h3{
+        /* font-size: 18px; */
         display: none;
+       
     }
-    .btn{
-        display: none;
-        background-color: #011802;
-        color: #fff;
-        position: relative;
-        /* top: 5%; */
-        margin-top: 5px;
-    
+
+    .hmtext .btn{
+        /* margin-top: 5px;  */
+      display: none;
+
     }
   }
   
   /* Small devices (portrait tablets and large phones, 600px and up) */
   @media only screen and (min-width: 600px) {
     .example {background: green;}
-    .home {
-        position: relative;
-        text-align: center;
-        color: white;
-        
-      } 
+
     .hmtext{
-        /* position: absolute; */
-        margin-top: 50px;
-        line-height: 0.6;
-         top: 70px; 
+        position: absolute;
+        margin-top: 60px; 
+        /* top: 20%; */
         left: 50%;
         transform: translate(-50%, -50%);
         font-weight:bolder;
-        font-size: 5px;
+        font-size: 1px;
     }
+    .hmtext h1{
+        font-size: 25px;
+    }
+
     .hmtext h3{
-        display: none;
+        font-size: 18px;
     }
-    .btn{
-        display: none;
-        background-color: #011802;
-        color: #fff;
-        position: relative;
-        top: 5%;
-        margin-top: 5px;
-    
+
+    .hmtext .btn{
+        margin-top: 5px; 
+      
+
     }
-    
   }
   
   /* Medium devices (landscape tablets, 768px and up) */
   @media only screen and (min-width: 768px) {
     .example {background: blue;}
-    .home {
-        position: relative;
-        text-align: center;
-        color: white;
-        
-      } 
+    /* body{
+        width: 100%;
+    } */
+
     .hmtext{
-        /* position: absolute; */
-        margin-top: 80px;
-        line-height: 0.8;
-         top: 70px; 
+        position: absolute;
+        margin-top: 80px; 
+        /* top: 20%; */
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-weight:bolder;
+        font-size: 1px;
+    }
+    .hmtext h1{
+        font-size: 30px;
+    }
+
+    .hmtext h3{
+        font-size: 20px;
+    }
+
+    .hmtext .btn{
+        margin-top: 5px; 
+      
+
+    }
+  } 
+
+  
+  /* Large devices (laptops/desktops, 992px and up) */
+  @media only screen and (min-width: 992px) {
+    .example {background: orange;}
+    .hmtext{
+        position: absolute;
+        margin-top: 120px; 
+        /* top: 20%; */
         left: 50%;
         transform: translate(-50%, -50%);
         font-weight:bolder;
     }
-    .btn{
-        background-color: #011802;
-        color: #fff;
-        position: relative;
-        top: 10%;
-        margin-top: 5px;
-    
+
+    .hmtext .btn{
+        margin-top: 30px; 
     }
     
-  } 
-  
-  /* Large devices (laptops/desktops, 992px changed to 1040px and up) */
-  @media only screen and (min-width: 1040px) {
-    .example {background: orange;}
-
-    /* Added code for screen testing*/
-    /* .home .hmimage{
-        width: fit-content;    
-    } */
-    /* .home {
-        position: relative;
-        text-align: center;
-        color: white;
-        margin: 10px; 
-      } */
-      .hmtext{
-          /* position: absolute; */
-          margin-top: 200px;
-          /* top: 50px; */
-          /* left: 50%;
-          transform: translate(-50%, -50%);
-          font-weight:bolder; */
-      }
   } 
   
   /* Extra large devices (large laptops and desktops, 1200px and up) */
   @media only screen and (min-width: 1200px) {
     .example {background: pink;}
 
-    /* Added code for screen testing*/
-    .home .hmimage{
-        width: fit-content;
+    body{
+        width: 100%;
+        }
         
-        
-    }
+        .hmtext{
+            position: absolute;
+            margin-top: 120px; 
+            /* top: 20%; */
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-weight:bolder;
+        }
+    
+        .hmtext .btn{
+            margin-top: 30px; 
+        }
+        .home .hmimage{
+            width: 100%;
+            
+            /* opacity: 0.9; */
+        }
+        .home {
+          position: relative;
+          text-align: center;
+          color: white;
+        }
   }
+
