--- a/style.css
+++ b/style.css
@@ -24,7 +24,9 @@ body{
 }
 
 .home .hmimage{
-    width: 100%;
+    /* width: 100%; */
+    background-repeat: no-repeat;
+    background-size: cover;
     
     /* opacity: 0.9; */
 }
@@ -36,6 +38,7 @@ body{
 .hmtext{
     position: absolute;
     margin-top: 150px;
+    font-size: 5vw;
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -188,6 +191,13 @@ body{
     text-indent: 5px;
     padding-left: 50px;
 }
+p.test1 {
+    white-space: nowrap; 
+    width: 200px; 
+    /* border: 1px solid #000000; */
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 .about .right {
     width: 45%;
     float: right;
@@ -207,7 +217,7 @@ body{
 
 /* Media Query */
 
-@media screen and (max-width:1119px) {
+/* @media screen and (max-width:1119px) {
     .hmtext{
         position: absolute;
         margin-top: 80px;
@@ -215,18 +225,18 @@ body{
         left: 50%;
         transform: translate(-50%, -50%);
         font-weight:bolder;
-    }
+    } */
 
-    .home .hmimage{
-        width: 100%;
+    /* .home .hmimage{
+        width: 100%; */
         
         /* opacity: 0.9; */
-    }
+    /* }
     .home {
       position: relative;
       text-align: center;
       color: white;
-    }
+    } */
     
     /* body{
         width: 100%;
@@ -250,4 +260,165 @@ body{
           transform: translate(-50%, -50%);
           font-weight:bolder;
       } */
-}
+/* } */
+/* For Trobleshooting  */
+      /* .example {
+        padding: 20px;
+        color: rgb(8, 215, 195)} */
+      /* Extra small devices (phones, 600px and down) */
+      @media only screen and (max-width: 600px) {
+        .example {background: red;}
+        .navbar-custom{
+            font-size: 12px;
+            padding: 1px;
+            
+        }
+       
+        .hmtext{
+            position: absolute;
+            margin-top: 30px; 
+            text-align: center;
+            /* top: 20%; */
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-weight:bolder;
+            font-size: 1px;
+        }
+        .hmtext h1{
+            font-size: 30px;
+            margin: auto;
+        }
+    
+        .hmtext h3{
+            /* font-size: 18px; */
+            display: none;
+           
+        }
+    
+        .hmtext .btn{
+            /* margin-top: 5px;  */
+          display: none;
+    
+        }
+        .home .hmimage{
+            width: 100%;
+            
+            /* opacity: 0.9; */
+        }
+      }
+      
+      /* Small devices (portrait tablets and large phones, 600px and up) */
+      @media only screen and (min-width: 600px) {
+        /* .example {background: green;} */
+        .navbar-custom{
+            font-size: 12px;
+            padding: 1px;
+            
+        }
+        .hmtext{
+            position: absolute;
+            margin-top: 80px; 
+            /* top: 20%; */
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-weight:bolder;
+            font-size: 1px;
+        }
+        .hmtext h1{
+            font-size: 20px;
+        }
+    
+        .hmtext h3{
+            font-size: 16px;
+        }
+    
+        .hmtext .btn{
+            margin-top: 2px; 
+          
+    
+        }
+      }
+      
+      /* Medium devices (landscape tablets, 768px and up) */
+      @media only screen and (min-width: 768px) {
+        /* .example {background: blue;} */
+        /* body{
+            width: 100%;
+        } */
+    
+        .hmtext{
+            position: absolute;
+            margin-top: 80px; 
+            /* top: 20%; */
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-weight:bolder;
+            font-size: 1px;
+        }
+        .hmtext h1{
+            font-size: 30px;
+        }
+    
+        .hmtext h3{
+            font-size: 20px;
+        }
+    
+        .hmtext .btn{
+            margin-top: 5px; 
+          
+    
+        }
+      } 
+    
+      
+      /* Large devices (laptops/desktops, 992px and up) */
+      @media only screen and (min-width: 992px) {
+        /* .example {background: orange;} */
+        .hmtext{
+            position: absolute;
+            margin-top: 120px; 
+            /* top: 20%; */
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-weight:bolder;
+        }
+    
+        .hmtext .btn{
+            margin-top: 30px; 
+        }
+        
+      } 
+      
+      /* Extra large devices (large laptops and desktops, 1200px and up) */
+      @media only screen and (min-width: 1200px) {
+        /* .example {background: pink;} */
+    
+        body{
+            width: 100%;
+            }
+            
+            .hmtext{
+                position: absolute;
+                margin-top: 120px; 
+                /* top: 20%; */
+                left: 50%;
+                transform: translate(-50%, -50%);
+                font-weight:bolder;
+            }
+        
+            .hmtext .btn{
+                margin-top: 30px; 
+            }
+            .home .hmimage{
+                width: 100%;
+                
+                /* opacity: 0.9; */
+            }
+            .home {
+              position: relative;
+              text-align: center;
+              color: white;
+            }
+      }
+    
+    
